fixed img glitch on iphone and changed about color

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 0vh 4vw 6vh 4vw;
-    background-color: var(--bg-deep-purple);
+    background-color: var(--bg-accent-color);
 }
 
 .home .content {
