--- a/src/styles/featuredWorks.css
+++ b/src/styles/featuredWorks.css
@@ -40,6 +40,7 @@
 }
 
 .featuredWorks .projectSlides .slide .preview > img {
+    height: intrinsic;
     max-width: 35vw;
 }
 
